charts/kubeservice-custom-limitrange/aaa.yaml
---
# Source: kubeservice-custom-limitrange/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clr-kubeservice-custom-limitrange-svc
  namespace: "a"
  labels:
    helm.sh/chart: kubeservice-custom-limitrange-1.0.0
    app.kubernetes.io/name: kubeservice-custom-limitrange
    app.kubernetes.io/instance: clr
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: webhook
      protocol: TCP
      name: webhook
  selector:
    app.kubernetes.io/name: kubeservice-custom-limitrange
    app.kubernetes.io/instance: clr
---
# Source: kubeservice-custom-limitrange/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clr-kubeservice-custom-limitrange
  namespace: "a"
  labels:
    helm.sh/chart: kubeservice-custom-limitrange-1.0.0
    app.kubernetes.io/name: kubeservice-custom-limitrange
    app.kubernetes.io/instance: clr
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: kubeservice-custom-limitrange
      app.kubernetes.io/instance: clr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubeservice-custom-limitrange
        app.kubernetes.io/instance: clr
    spec:
      serviceAccountName: clr-kubeservice-custom-limitrange
      securityContext:
        {}
      terminationGracePeriodSeconds: 10
      containers:
        - name: kubeservice-custom-limitrange
          securityContext:
            {}
          image: "dongjiang1989/customlimitrange-manager:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 443
              name: webhook
              protocol: TCP
            - containerPort: 8080
              name: metrics
              protocol: TCP
            - containerPort: 8081
              name: probe
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: probe
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: probe
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 64Mi
          volumeMounts:
          - mountPath: /etc/webhook/certs/
            name: cert
            readOnly: true
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: clr-kubeservice-custom-limitrange-certificate
---
# Source: kubeservice-custom-limitrange/templates/mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-pods-webhook-configuration
  namespace: "a"
  labels:
    app: mutating-pods-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from: a/clr-kubeservice-custom-limitrange-certificate
webhooks:
  - name: mutating-pods-clr-kubeservice-custom-limitrange-svc.a.svc
    clientConfig:
      service:
        name: clr-kubeservice-custom-limitrange-svc
        namespace: "a"
        path: "/mutate"
        port: 443
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: "Namespaced"
    admissionReviewVersions: ["v1","v1beta1"]
    sideEffects: None
    timeoutSeconds: 15
    failurePolicy: Ignore
---
# Source: kubeservice-custom-limitrange/templates/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
  namespace: "a"
  labels:
    app: mutating-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from:  a/clr-kubeservice-custom-limitrange-certificate
webhooks:
  - name: mutating-clr-kubeservice-custom-limitrange-svc.a.svc
    admissionReviewVersions: ["v1","v1beta1"]
    clientConfig:
      service:
        name: clr-kubeservice-custom-limitrange-svc
        namespace: "a"
        path: /mutate-custom-cmss-com-v1-customlimitrange
        port: 443
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["custom.cmss.com"]
        apiVersions: ["v1"]
        resources: ["customlimitranges", "customlimitranges/*"]
    sideEffects: None
    timeoutSeconds: 15
    reinvocationPolicy: Never
    failurePolicy: Fail
---
# Source: kubeservice-custom-limitrange/templates/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
  namespace: "a"
  labels:
    app: validating-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from:  a/clr-kubeservice-custom-limitrange-certificate
webhooks:
  - name: validating-clr-kubeservice-custom-limitrange-svc.a.svc
    admissionReviewVersions: ["v1","v1beta1"]
    clientConfig:
      service:
        name: clr-kubeservice-custom-limitrange-svc
        namespace: "a"
        path: /validate-custom-cmss-com-v1-customlimitrange
        port: 443
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["custom.cmss.com"]
        apiVersions: ["v1"]
        resources: ["customlimitranges", "customlimitranges/*"]
    sideEffects: None
    timeoutSeconds: 15
    failurePolicy: Fail
---
# Source: kubeservice-custom-limitrange/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "clr-kubeservice-custom-limitrange-test-connection"
  labels:
    helm.sh/chart: kubeservice-custom-limitrange-1.0.0
    app.kubernetes.io/name: kubeservice-custom-limitrange
    app.kubernetes.io/instance: clr
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['clr-kubeservice-custom-limitrange:443']
  restartPolicy: Never
